@@ -1216,7 +1216,9 @@ struct OnCommandDoneHandler : OutputHandler {
         //TODO: this is not necessarily true. Before setting the state
         //to ready here, one must now which command exactly was fired so
         //that gdb returned the "DONE" status for it.
-        m_engine->set_state (IDebugger::READY);
+        if (a_in.command ().name () != "detach-from-target") {
+            m_engine->set_state (IDebugger::READY);
+        }
     }
 };//struct OnCommandDoneHandler
 
@@ -2161,6 +2163,7 @@ GDBEngine::is_attached_to_target () const
 {
     LOG_FUNCTION_SCOPE_NORMAL_DD;
     THROW_IF_FAIL (m_priv);
+    LOG_DD ("is_attached: " << (int)m_priv->is_attached);
     return m_priv->is_attached;
 }
 
